--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "tailwindcss": "^0.5.2",
     "vue": "^2.5.2"
   },
   "devDependencies": {
