--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "glob-all": "^3.1.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
@@ -47,6 +48,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "purgecss-webpack-plugin": "^0.22.0",
     "rimraf": "^2.6.0",
     "sane": "^2.5.0",
     "semver": "^5.3.0",
