--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob-all": "^3.1.0",
     "node-notifier": "^5.1.2",
+    "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
