--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "chasegiunta/craft-vue",
+  "name": "chasegiunta/craft-vue-tailwind",
   "description": "Craft CMS",
   "version": "1.0",
   "minimum-stability": "RC",
