--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@
 /.idea
 /vendor
 .DS_Store
+
+/config/license.key
+
+node_modules/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
