--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,13 @@
 /config/license.key
 
 node_modules/
-/dist/
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -18,3 +24,4 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+*.sw*
