--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
   },
   "require": {
     "craftcms/cms": "^3.0.0",
-    "vlucas/phpdotenv": "^2.4.0"
+    "vlucas/phpdotenv": "^2.4.0",
+    "clubstudioltd/craft-asset-rev": "v6.0.1"
   },
   "autoload": {
     "psr-4": {
