--- a/package.json
+++ b/package.json
@@ -8,16 +8,24 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "postcss-import": "^12.0.0",
+    "tailwindcss": "^0.6.4",
     "vue": "^2.5.16"
   },
   "devDependencies": {
     "@vue/cli-service": "^3.0.0-rc.10",
+    "glob-all": "^3.1.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "purgecss-webpack-plugin": "^1.2.0",
+    "purgecss-whitelister": "^2.1.0",
     "sane": "^3.0.0",
     "vue-template-compiler": "^2.5.16",
     "webpack-manifest-plugin": "^2.0.3"
   },
   "postcss": {
     "plugins": {
+      "postcss-import": {},
+      "tailwindcss": "./tailwind.js",
       "autoprefixer": {}
     }
   },
