Update the license type in composer.json

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "craftcms",
     "project"
   ],
-  "license": "MIT",
+  "license": "Unlicense",
   "homepage": "https://craftcms.com/",
   "type": "project",
   "support": {
