--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.5.16"
+    "vue": "^2.6.0"
   },
   "devDependencies": {
-    "@vue/cli-service": "^3.0.0-rc.10",
-    "sane": "^3.0.0",
-    "vue-template-compiler": "^2.5.16",
-    "webpack-manifest-plugin": "^2.0.3"
+    "@vue/cli-service": "^3.8.0",
+    "sane": "^4.1.0",
+    "vue-template-compiler": "^2.6.0",
+    "webpack-manifest-plugin": "^2.0.4"
   },
   "postcss": {
     "plugins": {
