Replace Asset-Rev with Twigpack

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   "require": {
     "craftcms/cms": "^3.0.0",
     "vlucas/phpdotenv": "^2.4.0",
-    "clubstudioltd/craft-asset-rev": "v6.0.2"
+    "nystudio107/craft-twigpack": "^1.1"
   },
   "autoload": {
     "psr-4": {
