--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "filemanager-webpack-plugin": "^2.0.5",
     "vue": "^2.6.0"
   },
   "devDependencies": {
