--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.6.0"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
     "vue-template-compiler": "^2.6.0",
     "webpack-manifest-plugin": "^2.0.4"
