--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "postcss-import": "^12.0.0",
-    "tailwindcss": "^0.7.3",
+    "tailwindcss": "^1.0.0",
     "vue": "^2.6.0"
   },
   "devDependencies": {
@@ -25,7 +25,7 @@
   "postcss": {
     "plugins": {
       "postcss-import": {},
-      "tailwindcss": "./tailwind.js",
+      "tailwindcss": {},
       "autoprefixer": {}
     }
   },
