--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "postcss-import": "^12.0.1",
+    "postcss-import-ext-glob": "^1.1.0",
+    "postcss-nested": "^4.2.1",
     "tailwindcss": "^1.0.0",
     "vue": "^2.6.0"
   },
@@ -24,8 +26,10 @@
   },
   "postcss": {
     "plugins": {
+      "postcss-import-ext-glob": {},
       "postcss-import": {},
       "tailwindcss": {},
+      "postcss-nested": {},
       "autoprefixer": {}
     }
   },
