--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,25 @@
     "issues": "https://github.com/chasegiunta/craft-vue-tailwind/issues"
   },
   "require": {
+    "aelvan/imager": "^2.3",
+    "craftcms/aws-s3": "^1.2",
     "craftcms/cms": "^3.0.0",
-    "vlucas/phpdotenv": "^2.4.0",
+    "craftcms/redactor": "^2.4",
+    "ether/simplemap": "^3.7",
+    "fruitstudios/linkit": "^1.1",
+    "mikestecker/craft-videoembedder": "^1.1",
+    "nystudio107/craft-seomatic": "^3.2",
     "nystudio107/craft-twigpack": "^1.1",
-    "verbb/navigation": "1.1.14.1"
+    "nystudio107/craft-typogrify": "^1.1",
+    "solspace/craft-freeform": "^3.5",
+    "spicyweb/craft-embedded-assets": "2.1.1.1",
+    "spicyweb/craft-fieldlabels": "^1.1",
+    "spicyweb/craft-neo": "^2.5",
+    "supercool/tablemaker": "^2.0",
+    "topshelfcraft/supersort": "^3.0",
+    "verbb/navigation": "1.1.14.1",
+    "verbb/super-table": "^2.3",
+    "vlucas/phpdotenv": "^2.4.0"
   },
   "autoload": {
     "psr-4": {
@@ -34,7 +49,8 @@
     "optimize-autoloader": true,
     "platform": {
       "php": "7.0"
-    }
+    },
+    "sort-packages": true
   },
   "scripts": {
     "post-create-project-cmd": [
