Sections setup and local assets

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Local Imager Cache
+/web/imager/*
+
 # Editor directories and files
 .idea
 .vscode
