--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "ether/simplemap": "^3.7",
     "fruitstudios/linkit": "^1.1",
     "mikestecker/craft-videoembedder": "^1.1",
+    "nfourtythree/entriessubset": "^1.2",
     "nystudio107/craft-seomatic": "^3.2",
     "nystudio107/craft-twigpack": "^1.1",
     "nystudio107/craft-typogrify": "^1.1",
