Globals and Redactor Setup

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,24 @@ DB_TABLE_PREFIX=""
 
 # The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
 DB_PORT=""
+
+# The default site url (https://example.local)
+DEFAULT_SITE_URL=""
+
+# Amazon S3 credentials
+S3_ACCESS_KEY_ID=""
+S3_SECRET_ACCESS_KEY=""
+S3_BASE_URL=""
+
+# Stripe credentials (test account)
+STRIPE_TEST_PUBLIC_KEY=""
+STRIPE_TEST_SECRET_KEY=""
+STRIPE_TEST_WEBHOOK_SIGNING_SECRET=""
+
+# Email credentials
+SYSTEM_EMAIL_ADDRESS=""
+SENDER_NAME=""
+SMTP_HOST_NAME=""
+SMTP_PORT=""
+SMTP_USERNAME=""
+SMTP_PASSWORD=""
